<resources>
    <string name="app_name">NumAn</string>
    <string name="titulo_menu">Numerical Analysis</string>
    <string name="una_variable">One Variable Equations</string>
    <string name="sistemas_ecuaciones">Equations Systems</string>
    <string name="salir">Exit</string>
    <string name="entrar_funciones">Enter functions</string>
    <string name="metodos_intervalos">Interval methods</string>
    <string name="metodos_abiertos">Open methods</string>
    <string name="valores_iniciales">Determinate initial values</string>
    <string name="funcion_f">f(x)</string>
    <string name="derivada_f">f\'(x)</string>
    <string name="derivada2_f">f\'\'(x)</string>
    <string name="funcion_g">g(x)</string>
    <string name="hint_f">Enter f(x)</string>
    <string name="hint_g">Enter g(x)</string>
    <string name="hint_derivada_f">Enter f\'(x)</string>
    <string name="hint_derivada2_f">Enter f\'\'(x)</string>
    <string name="guardar">Save</string>
    <string name="limpiar">Clean</string>
    <string name="graficar">Graph</string>
    <string name="busqueda_incremental">Incremental Search</string>
    <string name="descripcion_valores_inciales">
        Through these methods you can determine optimal initial values for use in methods that will solve equation
    </string>
    <string name="error_funcion_f">Error, function f(x) has not been entered</string>
    <string name="ingresar">Enter</string>
    <string name="cancelar">Cancel</string>
    <string name="error_texto">Error in </string>
    <string name="datos">Data:</string>
    <string name="x0">X0</string>
    <string name="delta">Delta</string>
    <string name="iteraciones">Iterations</string>
    <string name="calcular">Calculate</string>
    <string name="solucion">Solution:</string>
    <string name="proceso">Show process</string>
    <string name="respuesta">Answer</string>
    <string name="respuesta_busquedas_raiz">Found root in</string>
    <string name="n">n</string>
    <string name="x1">X1</string>
    <string name="y0">Y0</string>
    <string name="error_intervalo">Error, no one interval was found</string>
    <string name="error_delta">Error, delta must be different from zero</string>
    <string name="error_iteraciones">Error, the iterations must be greater than zero</string>
    <string name="error_parser">Error executing function</string>
    <string name="error_evaluacion">Error in a function operation</string>
    <string name="error_tolerancia">Error, the tolerance must be greater than or equal to zero</string>
    <string name="error_intervalo_malo">Error, can not assure the existence of the root in the interval</string>
    <string name="error_raiz">Error, could not find a root</string>
    <string name="descripcion_metodos_intervalos">
        The following are methods to determine the roots of an equation of a variable, starting from an interval
        that contains a root. They are convergent methods.
    </string>
    <string name="biseccion">Bisection</string>
    <string name="regla_falsa">False Rule</string>
    <string name="xi">Xi</string>
    <string name="xs">Xs</string>
    <string name="xm">Xm</string>
    <string name="fxm">f(Xm)</string>
    <string name="error_absoluto">Absolute error</string>
    <string name="error_relativo">Relative error</string>
    <string name="tolerancia">Tolerance</string>
    <string name="respuesta_biseccion">error</string>
    <string name="respuesta_regla_falsa">error</string>
    <string name="error">Error</string>
    <string name="error_datos">Error, enter all data</string>
    <string name="descripcion_metodos_abiertos">
        The following are methods to determine the roots of an equation of a variable, these methods are fast but do not always converge
    </string>
    <string name="punto_fijo">Fixed Point</string>
    <string name="newton">Newton</string>
    <string name="secante">Secant</string>
    <string name="raices_multiples">Multiple Roots</string>
    <string name="error_punto_fijo">Error, you must enter f(x) and g(x)</string>
    <string name="error_newton">Error,  you must enter f(x) and f\'(x)</string>
    <string name="error_secante">Error, you must enter f(x)</string>
    <string name="error_raices_multiples">Error, you must enter f(x), f\'(x) and f\'\'(x)</string>
    <string name="respuesta_punto_fijo">error</string>
    <string name="x">X</string>
    <string name="fx">f(x)</string>
    <string name="respueta_newton">error</string>
    <string name="fdx">f\'(x)</string>
    <string name="f2dx">f\'\'(x)</string>
    <string name="ecuaciones">Enter equations</string>
    <string name="gaussiana">Gaussian Elimination Methods</string>
    <string name="factorizacion">Factoring Methods</string>
    <string name="iterativos">Iterative Methods</string>
    <string name="numero_ecuaciones">Number of equations</string>
    <string name="aceptar">Ok</string>
    <string name="descripcion_metodos_gaussiana">The following methods solve the
          Equations by Gaussian elimination</string>
    <string name="gauss_simple">Simple Gaussian elimination</string>
    <string name="pivoteo_parcial">Partial Pivoting</string>
    <string name="pivoteo_total">Total Pivoting</string>
    <string name="pivoteo_escalonado">Stepped Pivoting</string>
    <string name="titulo_matriz">Equations System:</string>
    <string name="error_matriz">Error, the equations system has not been entered</string>
    <string name="error_sistema_no_soluble">Error, the system can not be solved by this method</string>
    <string name="resultado">Answer:</string>
    <string name="anterior">Previous</string>
    <string name="siguiente">Next</string>
    <string name="etapa">Stage</string>
    <string name="cambio_fila">Row change:</string>
    <string name="cambio_columna">Column change:</string>
    <string name="factorizacion_simple">Simple Gaussian Elimination</string>
    <string name="factorizacion_pivoteo">Simple Gaussian Elimination with pivoting</string>
    <string name="factorizacion_cholesky">Cholesky</string>
    <string name="factorizacion_crout">Crout</string>
    <string name="factorizacion_doolittle">Doolittle</string>
    <string name="descripcion_metodos_factorizacion">The following methods solve the
         Equations factorizing the matrix A in two matrices L and U</string>
    <string name="matriz_z">Matrix Z:</string>
    <string name="error_no_reales">Error, the matrix has no solution in the real numbers by this method</string>
    <string name="lambda">Lambda</string>
    <string name="descripcion_metodos_iterativos">The following methods solve the system of equations iteratively giving new approximations</string>
    <string name="jacobi">Jacobi method</string>
    <string name="gauss_seidel">Gauss Seidel method</string>
    <string name="interpolacion">Interpolation</string>
    <string name="puntos">Enter points</string>
    <string name="newton_interpolacion">Newton method</string>
    <string name="lagrange">Lagrange method</string>
    <string name="numero_puntos">Number of points</string>
    <string name="y">Y</string>
    <string name="polinomio_interpolante">Interpolating Polynomial:</string>
    <string name="proceso_puntos">Process:</string>
    <string name="error_lambda">Error, lambda must be grather than zero</string>
    <string name="evaluar">Evaluate point:</string>
    <string name="calcular_btn">Calculate</string>
    <string name="error_punto">Error, enter the point</string>
    <string name="derivacion">Derivation</string>
    <string name="dos_puntos">Two points</string>
    <string name="tres_puntos">Three points</string>
    <string name="encima">Above</string>
    <string name="centro">In the middle</string>
    <string name="error_puntos">Error, enter all the points</string>
    <string name="help_biseccion">
        The Bisection method works with an interval containing the root. The method divides the interval into two sub intervals of equal size and evaluates the function at
        the endpoints and the midpoint of the interval to decide a new interval of half the size of the previous. The new interval is defined by comparing the signs of
        y1, y2 y y3, where:\n
        y1 = f(lower end of the interval)\n
        y2 = f(upper end of the interval)\n
        y3 = f(midpoint)\n
        And the midpoint is calculated:\n
        midpoint = (upper end of the interval + lower end of the interval)/2\n
        The new interval will be [lower end, midpoint] if the sign of y1 is different from y3 or [midpoint, upper end] if the sign of y2 is different form y3, ensuring the
        existence of a root in the new interval. The process is performed repeatedly getting smaller interval and finding a middle point at the end that is a root.
    </string>
    <string name="help_regla_falsa">
        The false-rule method It has the same characteristics and conditions that have the bisection method except how to calculate the midpoint.The difference is that it does not take the midpoint of the range, but takes as midpoint the intersection with the x axis by drawing a secant line defined by the points of the function at the endpoints. In evaluating the midpoint found and intervals, the functions must be chosen to give different signs and discard the other end having the same sign
    </string>
    <string name="help_punto_fijo">
    It\'s an open method that redefines the solution of a equation. The method searches an X that don\'t change where is applied the g function\n
		 x = g(x)\n
    And this X will be a root for the f function\n
    The objective is find the fixed point. The fixed point is the intersection from g(x) and y=x. In other words the fixed point is the x = g(x)
    </string>
    <string name="help_busquedas">
        The goal is to locate a function in an interval containing at least one root, and is based on the intermediate value theorem, and then decide whether the root lies on [(a + b)/2] . Repeat until the interval is sufficiently small.
        . Then evaluate the function increments. If the function when evaluated changes sign, then within the increment was used to evaluate the root exists a root.
        To use this method function should be differentiable and continues.
    </string>
    <string name="help_raices_multiples">
        Variant of Newton Method\n
        It is used when the given function has roots in critical points, that is to say, maximum, minimum and inflection points.\n
        The difference between this method and Newton\'s one is the way to find the X of the function.\n
        Xn+1 = Xn - (f(Xn)f\'(Xn)/(f\'(Xn)*f\'\'(Xn)
    </string>
    <string name="help_newton">
        Variant of fixed Point method\n
        The expression x=g(x) used in fixed point method to find the X of the function, is set for:\n
        Xn-1 = Xn - (f(Xn)/f\'(Xn))\n
        This new expression makes the calculation to  find the next X of the function to find a possible root, later.\n
        The Xn+1 is defined as the intersection between the X axix and the tanget rect to the curve y=f(x)s\n
    </string>
    <string name="help_secante">
        The secant method is a variant of Newton\'s method requires two initial intervals. In evaluating these two initial intervals should draw a line secante and where this line the x-axis is where the new interval arises. You should perform this procedure on until   successively find some of the roots of the given function, according to the tolerance established
    </string>
    <string name="help_eliminacion_gaussiana">
        Simple Gauusian Elimination:\n
	    Given a matrix, this method performs elementary rows and cols operations til it gets a equivalent system represented by a superior triangular matrix of coefficients.\n
	    After that,  by performing regressive substitution, the equation system variables values are found.
    </string>
    <string name="help">help</string>
</resources>