<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eafit.numericalanalysis.actividades.Menu"
    android:orientation="vertical">

    <TextView
        android:text="@string/titulo_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/una_variable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUnaVariable"
        android:layout_weight="1"
        android:onClick="ecuacionesUnaVariable (Menu)" />

    <Button
        android:text="@string/sistemas_ecuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSistemasEcuaciones"
        android:layout_weight="1"
        android:onClick="sistemasEcuaciones (Menu)" />

    <Button
        android:text="@string/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalir"
        android:layout_weight="1" />
</LinearLayout>
