<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_una_variable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eafit.numericalanalysis.actividades.ecuacionesUnaVariable.MenuUnaVariable">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/sistemas_ecuaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:layout_weight="0"
            android:textSize="24sp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/entrar_funciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnIngresoFunciones"
                android:layout_weight="1" />

            <Button
                android:text="@string/valores_iniciales"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnValoresIniciales"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/metodos_intervalos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnMetodosIntervalos"
                android:layout_weight="1" />

            <Button
                android:text="@string/metodos_abiertos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnMetodosIntervalos"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
